# autoxmimsim

./: .gitignore  AUTOPLAN.md  AUTOPLAN_TEST_PLAN.md  DESIGN.md  README.md  TODOS.md  pyproject.toml
src/autoxmimsim/: __init__.py  __main__.py  backends.py  cli.py  gui.py  objectives.py  optimization.py  parameters.py  reporting.py  spectrum.py  workflows.py  xmsi.py
tests/: test_cli.py  test_measured_spectrum.py  test_measured_workflow.py  test_optimization.py  test_real_bronze_workflow.py  test_reporting.py  test_synthetic_recovery.py  test_xmimsim_cli_backend.py  test_xmsi.py
tests/fixtures/: 50cent1002.hdf5  CuSnBronze.xmsi  measured-spectrum.csv
