[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoxmimsim"
version = "0.1.0"
description = "Automation helpers for XMI-MSIM workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Martin Radtke" }
]
dependencies = []

[project.scripts]
autoxmimsim = "autoxmimsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
